applications/traefik/traefik-setup.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-users
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.wesl.io`) 
      middlewares:
        - name: traefik-dashboard-auth 
      services:
        - kind: TraefikService
          name: api@internal
